fix(styling): fix border radius of overlay not matching border radius of videoplayer on mobile phone

--- a/src/components/Video/VideoPlayer/VideoPlayer.global.css
+++ b/src/components/Video/VideoPlayer/VideoPlayer.global.css
@@ -6,4 +6,8 @@
         rgb(0 0 0 / 0.3)
     );
     border-radius: var(--mantine-radius-md);
+
+    @media screen and (max-width: rem(750px)) {
+        border-radius: 0 !important;
+    }
 }
